Задание 4. Приложение. Часть 2.

--- a/Задание 02/index.html
+++ b/Задание 02/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
-		<!-- <link rel="stylesheet" href="css/style.css" /> -->
-		<title>Lessons. JS Udemy</title>
+		<meta charset="UTF-8" />		
+		<title>Задание 1. JS Udemy</title>
 	</head>
 	<body>
 		
